--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,4 @@
-[bdist_wheel]
-universal = 1
-
-[easy_install]
-zip_ok = false
+[flake8]
+exclude = .git,.env,.venv
+ignore = E123,E128,E402,W503,E731,W601
+max-line-length = 119
